# boost-log

./: .gitignore  CMakeLists.txt  README.md  logger.cpp  logger.h  main.cpp
